--- a/task_2_poc/proof_of_concept/service-authentication/package.json
+++ b/task_2_poc/proof_of_concept/service-authentication/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "service-users",
+  "name": "service-authentication",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -16,7 +16,6 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "passport": "^0.7.0",
-    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.16.3"
   }
